--- a/index.html
+++ b/index.html
@@ -1,139 +1,100 @@
 <!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="utf-8">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" >
+    <link href="./css/styles.css" rel="stylesheet" >
     <title>Studio</title>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-          integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header class="header-line">
-      <div class="header container">
-        <nav class="nav">
-          <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
-            <ul class="nav-list list">
-              <li class="nav-item"><a class="nav-link" href="#">Agencja</a></li>
-              <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-            <ul class="contact-list">
-              <li class="contact-item">
-                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="contact-item">
-                <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
-              </li>
-            </ul>        
-      </div>
+  </head>  
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html" class="nav-logo link">Web<span class="nav-logo-span">Studio</span></a>
+        <ul class="list">
+          <li><a href="./index.html" class="nav-link link">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+          <li><a href="" class="nav-link link">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section class="section-h1 section">
-          <div class="section-h1-div">
-            <h1 class="section-h1-title">Efektywne rozwiązania dla waszego biznesu</h1>
-            <button class="section-h1-btn" type="button">Zamów usługę</button>
-          </div>
-        </section>
-        <section class="descript section container">
-            <ul class="list flex">
-                <li class="descript-item">
-                    <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="descript-item">
-                    <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="descript-item">
-                    <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="descript-item">
-                    <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-            </ul>
-        </section>              
-        <section class="about-us container">
-            <h2 class="section-h2-title">Czym się zajmujemy</h2>
-            <ul class="list flex">
-                <li class="about-us-item">
-                    <img src="images/img1.jpg" width="370" height="294" alt="about-us-1">
-                </li>
-                <li class="about-us-item">
-                    <img src="images/img2.jpg" width="370" height="294" alt="about-us-2">
-                </li>
-                <li class="about-us-item">
-                    <img src="images/img3.jpg" width="370" height="294" alt="about-us-3">
-                </li>
-            </ul>
-        </section>
-        <section class="team section">
-          <div class="container">
-            <h2 class="section-h2-title">Nasz zespół</h2>
-              <ul class="list flex">
-                  <li class="team-item">
-                    <figure class="team-photo">
-                        <img src="images/img4.jpg" width="270" height="260" alt="John Doe" >
-                            <figcaption class="team-figcaption">
-                            <h3 class="section-h3-title">John Doe</h3>
-                            <p class="team-text">Product Designer</p>
-                            </figcaption>
-                    </figure>
-                  </li>
-                  <li class="team-item">
-                      <figure class="team-photo">
-                      <img src="images/img5.jpg" width="270" height="260" alt="John Doe" >
-                          <figcaption class="team-figcaption">
-                              <h3 class="section-h3-title">John Doe</h3>
-                              <p class="team-text">Frontend Developer</p>
-                          </figcaption>
-                      </figure>
-                  </li>
-                  <li class="team-item">
-                      <figure class="team-photo">
-                      <img src="images/img6.jpg" width="270" height="260" alt="John Doe" >
-                          <figcaption class="team-figcaption">
-                              <h3 class="section-h3-title">John Doe</h3>
-                              <p class="team-text">Marketing</p>
-                          </figcaption>
-                      </figure>
-                  </li>
-                  <li class="team-item">
-                      <figure class="team-photo">
-                      <img src="images/img7.jpg" width="270" height="260" alt="John Doe" >
-                          <figcaption class="team-figcaption">
-                              <h3 class="section-h3-title">John Doe</h3>
-                              <p class="team-text">UI Designer</p>
-                          </figcaption>
-                      </figure>
-                  </li>
-              </ul>
-          </div>
-        </section>
-    </main>  
-        <footer class="footer">
-            <div class="container">
-              <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
-              <address>
-                <ul class="address-list list">
-                  <li class="address-item">m. Warszawa, Aleje Jerozolimskie 21</li>
-                  <li class="address-item">
-                    <a class="address-link" href="mailto:info@example.com">info@example.com</a>
-                  </li>
-                  <li class="address-item">
-                    <a class="address-link" href="tel:+48111111111">+48 111 111 111</a>
-                  </li>
-                </ul>
-              </address>
-            </div>
-        </footer>    
-</body>
+      <!--section no.1 Hero -->
+      <section class="section-one-hero">
+        <h1 class="section-one-h1">Effective Solutions for Your Business</h1>
+        <button type="button" class="section-one-button">Order Service</button>
+      </section>
+      <!--section no.2 -->
+      <section>
+        <h2 class="section-h2">Our strong sides</h2>
+        <ul class="list">
+          <li>
+            <h3 class="section-no2-title">Strategy</h3>
+            <p class="section-no2-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li>
+            <h3 class="section-no2-title">Punctuality</h3>
+            <p class="section-no2-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li>
+            <h3 class="section-no2-title">Diligence</h3>
+            <p class="section-no2-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          </li>
+          <li>
+            <h3 class="section-no2-title">Technologies</h3>
+            <p class="section-no2-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          </li>  
+        </ul>        
+      </section>
+      <!--section no.3 -->
+      <section>
+        <h2 class="section-h2">What are we doing</h2>
+          <ul class="list">
+            <li><img src="./images/work01.jpg" width="360" height="300" alt="computer monitor displaying data"></li>
+            <li><img src="./images/work02.jpg" width="360" height="300" alt="screenshots of a mobile phone"></li>
+            <li><img src="./images/work03.jpg" width="360" height="300" alt="mobile phone in hand"></li>
+          </ul>        
+      </section>
+      <!--section no.4 -->
+      <section class="section-no4">
+        <h2 class="section-h2">Our Team</h2>
+          <ul class="list">
+            <li class="section-no4-image-background">
+              <img src="./images/team01.jpg" width="264" height="260" alt="young man in a blue shirt with short stubble">
+                <h3 class="section-no4-title">Mark Guerrero</h3>
+                <p class="section-no4-text">Product Designer</p>
+            </li>
+            <li class="section-no4-image-background">
+              <img src="./images/team02.jpg" width="264" height="260" alt="young man in a blue shirt in short hair without stubble">
+                <h3 class="section-no4-title">Tom Ford</h3>
+                <p class="section-no4-text">Frontend Developer</p>
+            </li>
+            <li class="section-no4-image-background">
+              <img src="./images/team03.jpg" width="264" height="260" alt="young woman in long black hair in a pink blouse">
+                <h3 class="section-no4-title">Camila Garcia</h3>
+                <p class="section-no4-text">Marketing</p>
+            </li>
+            <li class="section-no4-image-background">
+              <img src="./images/team04.jpg" width="264" height="260" alt="young man in a gray blouse with short stubble">
+                <h3 class="section-no4-title">Daniel Wilson</h3>
+                <p class="section-no4-text">UI Designer</p>
+            </li>
+          </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+    </footer>
+  </body>
 </html>
