--- a/portfolio.html
+++ b/portfolio.html
@@ -1,150 +1,96 @@
 <!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="utf-8">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" >
+    <link href="./css/styles.css" rel="stylesheet" >
     <title>Portfolio</title>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-          integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header class="header-line">
-        <div class="header container">
-            <nav class="nav">
-                <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
-                <ul class="nav-list list">
-                    <li class="nav-item"><a class="nav-link" href="#">Agencja</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
-                </ul>
-            </nav>
-            <ul class="contact-list">
-              <li class="contact-item">
-                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="contact-item">
-                <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
-              </li>
-            </ul>
-        </div>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html" class="nav-logo link">Web<span class="nav-logo-span">Studio</span></a>
+        <ul class="list">
+          <li><a href="./index.html" class="nav-link link">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+          <li><a href="" class="nav-link link">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
-    <main class="container">
-        <section class="portf-menu-list section">
-            <ul>
-                <li class="portf-menu-item"><button type="button" class="btn">Wszystkie</button></li>
-                <li class="portf-menu-item"><button type="button" class="btn">Strony</button></li>
-                <li class="portf-menu-item"><button type="button" class="btn">Aplikacje</button></li>
-                <li class="portf-menu-item"><button type="button" class="btn">Dizajn</button></li>
-                <li class="portf-menu-item"><button type="button" class="btn">Marketing</button></li>
-            </ul>
-        </section>
-        <section>
-            <ul class="project-list list">
-                <li>
-                    <figure>
-                        <img src="images/img-portf-01.jpg" width="370" height="294" alt="portfolio1" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Technocrack</h3>
-                            <p class="project-text">Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-02.jpg" width="370" height="294" alt="portfolio2" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Grafika New Orlean vs Golden Star</h3>
-                            <p class="project-text">Dizajn</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-03.jpg" width="370" height="294" alt="portfolio3" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Restauracja Seafood</h3>
-                            <p class="project-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-04.jpg" width="370" height="294" alt="portfolio4" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Projekt Prime</h3>
-                            <p class="project-text">Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-05.jpg" width="370" height="294" alt="portfolio5" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Projekt Boxes</h3>
-                            <p class="project-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-06.jpg" width="370" height="294" alt="portfolio6" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Inspiration has no Borders</h3>
-                            <p class="project-text">Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-07.jpg" width="370" height="294" alt="portfolio7" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Magazyn Limited Edition</h3>
-                            <p class="project-text">Dizajn</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-08.jpg" width="370" height="294" alt="portfolio8" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Projekt LAB</h3>
-                            <p class="project-text">Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="images/img-portf-09.jpg" width="370" height="294" alt="portfolio9" >
-                        <figcaption class="project-figcaption">
-                            <h3 class="project-h3-title">Growing Business</h3>
-                            <p class="project-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
-        </section>
+    <main>
+      <!--section no.1 -->
+      <section>
+        <ul class="list">
+          <li><button type="button" class="portfolio-button">All</button></li>
+          <li><button type="button" class="portfolio-button">Web Site</button></li>
+          <li><button type="button" class="portfolio-button">App</button></li>
+          <li><button type="button" class="portfolio-button">Design</button></li>
+          <li><button type="button" class="portfolio-button">Marketing</button></li>
+        </ul>
+      
+        <ul class="list">
+          <li>
+            <img src="images/portfolio01.jpg" width="360" height="300" alt="Banking App Interface Concept - banking application options are shown">
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img src="images/portfolio02.jpg" width="360" height="300" alt="Cashless Payment - The hand holds the phone and brings it closer to the reader">
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img src="images/portfolio03.jpg" width="360" height="300" alt="Meditation App - laptop and phone with the same wallpaper">
+              <h2 class="portfolio-title">Meditation App</h2>
+              <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img src="images/portfolio04.jpg" width="360" height="300" alt="Taxi Service - driver using the mobile application">
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img src="images/portfolio05.jpg" width="360" height="300" alt="Screen Illustrations - five different wallpapers for mobile phone">
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img src="images/portfolio06.jpg" width="360" height="300" alt="Online Courses - young woman in orange sweater talking on mobile phone">
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img src="images/portfolio07.jpg" width="360" height="300" alt="Instagram Stories Concept - six pictures per topic make everything feel easier">
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img src="images/portfolio08.jpg" width="360" height="300" alt="Organic Food - woman carries vegetables in a net">
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
+          </li>
+          <li>
+            <img src="images/portfolio09.jpg" width="360" height="300" alt="Fresh Coffee - hand pours milk into a cup of coffee">
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
-        <footer class="footer">
-            <div class="container">
-                <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
-                <address>
-                    <ul class="address-list list">
-                        <li class="address-item">m. Warszawa, Aleje Jerozolimskie 21</li>
-                        <li class="address-item">
-                            <a class="address-link" href="mailto:info@example.com"><span>info@example.com</span></a>
-                        </li>
-                        <li class="address-item">
-                            <a class="address-link" href="tel:+48111111111">+48 111 111 111</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-        </footer>    
-</body>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+    </footer>
+  </body>
 </html>
