--- a/index.html
+++ b/index.html
@@ -1,100 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" >
-    <link href="./css/styles.css" rel="stylesheet" >
-    <title>Studio</title>
-  </head>  
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="nav-logo link">Web<span class="nav-logo-span">Studio</span></a>
-        <ul class="list">
-          <li><a href="./index.html" class="nav-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
-          <li><a href="" class="nav-link link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+        href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
+
+</head>
+
+<body>
+    <header class="page-header">
+        <div class="container-header container">
+            <nav class="navigation-list">
+                <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
+                <ul class="navigation-page list">
+                    <li><a href="./index.html" class="navigation-link link">Studio</a></li>
+                    <li><a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
+                    <li><a href="" class="navigation-link link">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <address class="address">
+                <ul class="address-list list">
+                    <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
+
     <main>
-      <!--section no.1 Hero -->
-      <section class="section-one-hero">
-        <h1 class="section-one-h1">Effective Solutions for Your Business</h1>
-        <button type="button" class="section-one-button">Order Service</button>
-      </section>
-      <!--section no.2 -->
-      <section>
-        <h2 class="section-h2">Our strong sides</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-no2-title">Strategy</h3>
-            <p class="section-no2-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-          </li>
-          <li>
-            <h3 class="section-no2-title">Punctuality</h3>
-            <p class="section-no2-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-          </li>
-          <li>
-            <h3 class="section-no2-title">Diligence</h3>
-            <p class="section-no2-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li>
-            <h3 class="section-no2-title">Technologies</h3>
-            <p class="section-no2-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>  
-        </ul>        
-      </section>
-      <!--section no.3 -->
-      <section>
-        <h2 class="section-h2">What are we doing</h2>
-          <ul class="list">
-            <li><img src="./images/work01.jpg" width="360" height="300" alt="computer monitor displaying data"></li>
-            <li><img src="./images/work02.jpg" width="360" height="300" alt="screenshots of a mobile phone"></li>
-            <li><img src="./images/work03.jpg" width="360" height="300" alt="mobile phone in hand"></li>
-          </ul>        
-      </section>
-      <!--section no.4 -->
-      <section class="section-no4">
-        <h2 class="section-h2">Our Team</h2>
-          <ul class="list">
-            <li class="section-no4-image-background">
-              <img src="./images/team01.jpg" width="264" height="260" alt="young man in a blue shirt with short stubble">
-                <h3 class="section-no4-title">Mark Guerrero</h3>
-                <p class="section-no4-text">Product Designer</p>
-            </li>
-            <li class="section-no4-image-background">
-              <img src="./images/team02.jpg" width="264" height="260" alt="young man in a blue shirt in short hair without stubble">
-                <h3 class="section-no4-title">Tom Ford</h3>
-                <p class="section-no4-text">Frontend Developer</p>
-            </li>
-            <li class="section-no4-image-background">
-              <img src="./images/team03.jpg" width="264" height="260" alt="young woman in long black hair in a pink blouse">
-                <h3 class="section-no4-title">Camila Garcia</h3>
-                <p class="section-no4-text">Marketing</p>
-            </li>
-            <li class="section-no4-image-background">
-              <img src="./images/team04.jpg" width="264" height="260" alt="young man in a gray blouse with short stubble">
-                <h3 class="section-no4-title">Daniel Wilson</h3>
-                <p class="section-no4-text">UI Designer</p>
-            </li>
-          </ul>
-      </section>
+        <!--Section no. 1 filters-->
+        <section class="section-project">
+            <div class="container">
+                <h1 class="hidden-headline visually-hidden">Fiter Btn Active</h1>
+
+                <ul class="filters-list list">
+                    <li><button type="button" class="filter-button">All</button></li>
+                    <li><button type="button" class="filter-button">Web Site</button></li>
+                    <li><button type="button" class="filter-button">App</button></li>
+                    <li><button type="button" class="filter-button">Design</button></li>
+                    <li><button type="button" class="filter-button">Marketing</button></li>
+                </ul>
+
+                <ul class="project-list list">
+                    <li class="project-point">
+                        <a href="./images/banking-app-image-01.jpg" class="project-photo link">
+                            <img src="./images/banking-app-image-01.jpg"
+                                alt="the appearance of the screens from the banking application" width="360"
+                                height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Banking App Interface Concept</h2>
+                                <p class="project-text">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/cashless_payment-image-02.jpg" class="project-photo link">
+                            <img src="./images/cashless_payment-image-02.jpg" alt="phone reading QR code " width="360"
+                                height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Cashless Payment</h2>
+                                <p class="project-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/meditaion-app-image-03.jpg" class="project-photo link">
+                            <img src="./images/meditaion-app-image-03.jpg"
+                                alt="laptop and phone with the same wallpaper" width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Meditation App</h2>
+                                <p class="project-text">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/taxi-service-image-04.jpg" class="project-photo link">
+                            <img src="./images/taxi-service-image-04.jpg" alt="driver using the mobile application"
+                                width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Taxi Service</h2>
+                                <p class="project-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/screen-illustrations-image-05.jpg" class="project-photo link">
+                            <img src="./images/screen-illustrations-image-05.jpg"
+                                alt="five types of wallpaper for mobile phone" width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Screen Illustrations</h2>
+                                <p class="project-text">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/online-courses-image-06.jpg" class="project-photo link">
+                            <img src="./images/online-courses-image-06.jpg"
+                                alt="woman in an orange sweater using a mobile phone" width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Online Courses</h2>
+                                <p class="project-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/instagram-stories-concept-image-07.jpg" class="project-photo link">
+                            <img src="./images/instagram-stories-concept-image-07.jpg"
+                                alt="six screens showing a woman in a white blouse" width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Instagram Stories Concept</h2>
+                                <p class="project-text">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/organic-food-image-08.jpg" class="project-photo link">
+                            <img src="./images/organic-food-image-08.jpg"
+                                alt="fragment of a woman dressed in a gray tracksuit carrying a bag of fruit"
+                                width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Organic Food</h2>
+                                <p class="project-text">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-point">
+                        <a href="./images/fresh-coffee-image-09.jpg" class="project-photo link">
+                            <img src="./images/fresh-coffee-image-09.jpg" alt="someone pours milk into coffee"
+                                width="360" height="300">
+                            <div class="portfolio-section-container">
+                                <h2 class="project-tittle">Fresh Coffee</h2>
+                                <p class="project-text">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+
     </main>
+
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+        <div class="container">
+            <a href="./index.html" class="footer-navigation-logo link">Web<span
+                    class="logo-footerspan">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
-  </body>
+
+</body>
+
 </html>
